--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -8,17 +8,47 @@
 
 /*Styling for all buttons*/
 
-.btn {
-	padding: 12px 32px;
-	border: 4px solid gray;
-	font-family: 'Open Sans', sans-serif;
+.bton {
+	background-color: #29a19c;
+	border-style: none;
+	padding: 8px 15px;
+	transition: .4s;
+	font-size: 12pt;
+	font-weight: 600;
+	transition: .4s;
 }
 
 .btn-view {
 	text-decoration: none;
-	color: gray;
+	color: white;
 	font-size: 20px;
 	margin-top: 20px;
+}
+
+.bton:hover {
+	background-color: #a3f7bf;
+}
+
+.btn {
+	background-color: #29a19c;
+	color: white;
+	border-style: none;
+	padding: 8px 15px;
+	transition: .4s;
+	font-size: 12pt;
+	font-weight: 600;
+	transition: .4s;
+	position: absolute;
+	left: 331px;
+}
+
+.btn > a {
+	text-decoration: none;
+	color: white;
+}
+
+.btn:hover {
+	background-color: #a3f7bf;
 }
 
 /*End for all buttons*/
@@ -42,7 +72,15 @@
 }
 
 .line-skl {
-	
+	position: relative;
+	top: 20px;
+	left: 345px;
+}
+
+.line-con {
+	position: relative;
+	top: 20px;
+	left: 640px;
 }
 
 /*End for line*/
@@ -50,7 +88,9 @@
 /*Styling for Home*/
 
 .home {
-	background-color: red;
+	background: url(../images/studio.jpg);
+	background-size: cover;
+	background-position: center;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -61,15 +101,62 @@
 
 h1, h2 {
 	font-family: 'Roboto Mono', monospace;
+	color: #333333;
+	font-size: 40px;
+}
+
+.bg-color {
+	height: 120px;
+	width: 750px;
+	background-color: rgba(255,255,255,50%);
+	position: absolute;
+	top: 232px;
+	left: 295px;
+	z-index: 1;
+}
+
+.home > div > h1 {
+	position: relative;
+	z-index: 2;
+}
+
+.home > div > h2 {
+	position: relative;
+	z-index: 2;
 }
 
 /*End for Home*/
+
+/*Styling for Navigation*/
+
+nav {
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: sticky;
+	top: 0;
+	background-color: rgba( 101, 92, 86, 75%);
+	z-index: 100;
+}
+
+nav > ul{
+	display: flex;
+	list-style-type: none;
+	color: orange;
+}
+
+nav > ul > li{
+	margin: 0 20px;
+}
+
+/*End for Navigation*/
 
 /*Styling for About*/
 
 .aboutMe {
 	/*background-color: green;*/
-	height: 100vh;
+	height: 70vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -90,58 +177,113 @@ h1, h2 {
 
 /*Styling for Projects*/
 
-.projects {
-	/*background-color: blue;*/
-	height: 100vh;
-	text-align: center;
+.proj1 {
+	background: url(../images/proj1.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 330px;
+	width: 460px;
 }
 
-.proj-container {
+.projt1 {
+	height: 330px;
+	width: 460px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+	font-size: 11pt;
+	color: #222831;
+	line-height: 1.3;
+}
+
+.projt1 > h1 {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 600;
+	color: #393e46;
+	font-size: 18pt;
+}
+
+.proj2 {
+	background: url(../images/uncons.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 330px;
+	width: 460px;
+}
+
+.projt2 {
+	height: 330px;
+	width: 460px;
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+	align-items: flex-end;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+	font-size: 11pt;
+	color: #222831;
+	line-height: 1.3;
+}
+
+.projt2 > h1 {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 600;
+	color: #393e46;
+	font-size: 18pt;
+}
+
+.proj3 {
+	background: url(../images/uncons.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 330px;
+	width: 460px;
+}
+
+.projt3 {
+	height: 330px;
+	width: 460px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+	font-size: 11pt;
+	color: #222831;
+	line-height: 1.3;
+}
+
+.projt3 > h1 {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 600;
+	color: #393e46;
+	font-size: 18pt;
+}
+
+.proj-gall {
+	display: flex;
 	flex-wrap: wrap;
-	margin: 0 150px;
-	padding: 50px 0;
+	justify-content: flex-end;
+	position: relative;
+	right: 70px; 
+  	top: 50px;
+  	margin-bottom: 100px;
+}
+
+.proj {
+	margin: 20px 5px;
 }
 
 .projects > div > h1 {
-	padding-top: 30px;
+	display: flex;
+	justify-content: center;
 }
 
-.project1 {
-	background: url(../images/project1.jpg);
-	width: 300px;
-	height: 200px;
-}
-
-.project2 {
-	background: url(../images/project2.jpg);
-	width: 300px;
-	height: 200px;
-}
-
-.project3 {
-	background: url(../images/project3.jpg);
-	width: 300px;
-	height: 200px;
-}
-
-.project4 {
-	background: url(../images/project4.jpg);
-	width: 300px;
-	height: 200px;
-}
-
-.project5 {
-	background: url(../images/project5.jpg);
-	width: 300px;
-	height: 200px;
-}
-
-.project6 {
-	background: url(../images/project6.jpg);
-	width: 300px;
-	height: 200px;
+.projt1 > h1 > a {
+	text-decoration: none;
+	color: #393e46;
 }
 
 /*End for all Projects*/
@@ -159,11 +301,9 @@ h1, h2 {
 }
 
 .skills > div > img {
+	position: relative;
+	top: 30px;
 	width: 750px;
-}
-
-.skills > div > h1 {
-	
 }
 
 /*End for all Skills*/
@@ -171,8 +311,80 @@ h1, h2 {
 /*Styling for Contact*/
 
 .contact {
-	background-color: brown;
+	background-color: #75b79e;
 	height: 100vh;
+}
+
+.contact > div > h1 {
+	display: flex;
+	justify-content: center;
+	position: relative;
+	top: 20px;
+}
+
+iframe {
+	position: absolute;
+	top: 130px;
+	left: 600px;
+	width: 400px; 
+	height: 300px;
+	border: 0;
+}
+
+form {
+	width: 60%;
+	align-items: center;
+}
+
+.form-contents {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	bottom: 20px;
+	left: 200px;
+}
+
+.form-contents > h1 {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 600;
+	color: #393e46;
+	font-size: 30px;
+}
+
+.form-contents > p {
+	position: relative;
+	top: 70px;
+	font-family: 'Raleway', sans-serif;
+	line-height: 1.5;
+	color: gray;
+	margin-right: 272px;
+}
+
+.form-input	{
+	display: block;
+	width: 100%;
+	font-size: 16px;
+	padding: 15px;
+	margin-top: 30px;
+}
+
+.country {
+	display: block;
+	width: 100%;
+	font-size: 15px;
+	margin-top: 30px;
+	padding: 3px;
+}
+
+.c1 {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 100px;
+}
+
+.d1 {
+	margin-right: 10px;
 }
 
 /*End for all Contact*/
