--- a/assets/styles/portfolio.css
+++ b/assets/styles/portfolio.css
@@ -206,7 +206,7 @@ nav > ul > li{
 }
 
 .proj2 {
-	background: url(../images/uncons.jpg);
+	background: url(../images/proj2.png);
 	background-position: center;
 	background-size: cover;
 	height: 330px;
